--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -10,8 +10,8 @@
   [ngClass]="{'show': showProperties}">
   <div class="d-flex align-items-center mb-4">
     <span class="font-20 text-dark font-weight-bold w-100 d-flex align-items-center justify-content-between">
-      <div class="d-flex schemaProperties-header ">
-        <span *ngIf="name" class="text-truncate">{{name}}&nbsp;</span>
+      <div class="d-flex schemaProperties-header " style="max-width: 300px">
+        <span *ngIf="name" class="text-truncate" [ngbTooltip]="name">{{name}}&nbsp;</span>
         <span *ngIf="!name" class="text-truncate text-muted">Unnamed&nbsp;</span>
       </div>
       <span class="dsi dsi-close text-dark hover" id="closeicon" (click)="showProperties=false"></span>
