--- a/src/app/home/control-panel/user/user.component.scss
+++ b/src/app/home/control-panel/user/user.component.scss
@@ -255,7 +255,8 @@
 
 .users {
   overflow-y: auto;
-  max-height: inherit;
+  max-height: 80vh;
+  min-height: 80vh;
   overflow-x: hidden;
 }
 
@@ -430,7 +431,7 @@
 
   .btn {
     &:hover {
-      color: $secondary  !important;
+      color: $secondary !important;
     }
   }
 }
