--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -124,13 +124,14 @@
       <div class="form-group">
         <label class="font-13 text-secondary" for="type">Connector Type</label>
         <select id="type" class="form-control" formControlName="type">
-            <option value="MONGODB">MongoDB</option>
-            <option value="MYSQL">MySQL</option>
-            <option value="PG">Postgres SQL</option>
+            <option value="MongoDB">MongoDB</option>
+            <option value="MySQL">MySQL</option>
+            <option value="PostgreSQL">PostgreSQL</option>
             <option value="SFTP">SFTP</option>
-            <option value="KAFKA">Apache Kafka</option>
-            <option value="AZBLOB">Azure Blob</option>
-            <option value="S3">S3</option>
+            <option value="Apache Kafka">Apache Kafka</option>
+            <option value="Azure Blob Storage">Azure Blob Storage</option>
+            <option value="Amazon S3">Amazon S3</option>
+            <option value="Google Cloud Storage">Google Cloud Storage</option>
         </select>
     </div>
     </div>
