--- a/src/app/utils/structure-field-properties/structure-field-properties.component.scss
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.scss
@@ -2,14 +2,12 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 .schemaProperties {
-  height: 100vh;
   width: 364px;
   top: 0;
   right: -360px;
   z-index: 2;
   transition: 0.2s;
-  overflow: auto;
-  padding-top: 40px !important;
+  padding-top: 20px !important;
 
   &.show {
     right: 0px !important;
@@ -39,12 +37,6 @@
   .schemaProperties-header {
     font-size: 20px;
   }
-
-  // .schemaProperties-wrapper {
-  //   overflow-y: auto;
-  //   min-height: calc(100vh - 310px);
-  //   max-height: calc(100vh - 310px);
-  // }
 
   .toggler {
     top: 3px;
@@ -142,8 +134,8 @@
 
   .selected-type,
   .selected-type:hover {
-    background: $capiot  !important;
-    color: $white  !important;
+    background: $capiot !important;
+    color: $white !important;
     width: 42px;
     height: 42px;
     border-radius: 4px;
@@ -173,6 +165,11 @@
       font-size: 10px;
     }
   }
+}
+
+.schemaProperties-wrapper {
+  height: 90vh;
+  overflow: auto;
 }
 
 .example {
