GridFS fileStorage option

--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -129,6 +129,7 @@
             <option value="PostgreSQL">PostgreSQL</option>
             <option value="SFTP">SFTP</option>
             <option value="Apache Kafka">Apache Kafka</option>
+            <option value="GridFS">MongoDB GridFS</option>
             <option value="Azure Blob Storage">Azure Blob Storage</option>
             <option value="Amazon S3">Amazon S3</option>
             <option value="Google Cloud Storage">Google Cloud Storage</option>
