DEF2367 is fixed

--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -77,7 +77,7 @@
                   Pick accent colour for the app center that complements your brand look.
                 </span>
                 <div class="mb-4">
-                  <odp-color-picker [(color)]="appData.appCenterStyle.primaryColor">
+                  <odp-color-picker #colorpicker [(color)]="appData.appCenterStyle.primaryColor">
                   </odp-color-picker>
                 </div>
               </div>
