--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -7,13 +7,13 @@
     <input id="filePattern" class="form-control" type="text" [(ngModel)]="currNode.options.filePattern">
 </div>
 <div class="d-flex flex-column">
-    <div class="form-group d-flex align-items-center">
+    <!-- <div class="form-group d-flex align-items-center">
         <odp-checkbox [edit]="edit" [(checked)]="currNode.options.get" (checkedChange)="setSFTPAction('get',$event)">
         </odp-checkbox>
         <span class="ml-2 text-secondary">Get File</span>
-    </div>
+    </div> -->
     <div class="form-group d-flex align-items-center">
-        <odp-checkbox [edit]="edit" [(checked)]="currNode.options.put" (checkedChange)="setSFTPAction('put',$event)">
+        <odp-checkbox [edit]="edit" [(checked)]="currNode.options.put" [disabled]="true">
         </odp-checkbox>
         <span class="ml-2 text-secondary">Put File</span>
     </div>
