--- a/src/app/home/service-manager/data-management/data-management.component.html
+++ b/src/app/home/service-manager/data-management/data-management.component.html
@@ -130,6 +130,33 @@
                 </div>
             </div>
         </div>
+        <div class="insights-settings">
+            <div class="fw-600 font-20">Default Connectors</div>
+            <div class="row my-4">
+                <div class="col-3">
+                    <h6 class="font-weight-bold">Data Connectors</h6>
+                </div>
+                <div class="col-4 switch-container">
+                    <select id="data" class="form-control" (change)="selectConnector($event,'data')">
+                        <option [value]="connector._id" *ngFor="let connector of dataConnectors"
+                            [selected]="connector._id === appData.connectors.data._id">{{connector.name}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <div class="row my-4">
+                <div class="col-3">
+                    <h6 class="font-weight-bold">File Connectors</h6>
+                </div>
+                <div class="col-4 switch-container">
+                    <select id="data" class="form-control" (change)="selectConnector($event,'data')">
+                        <option [value]="connector._id" *ngFor="let connector of fileConnectors"
+                            [selected]="connector._id === appData.connectors.file._id">{{connector.name}}
+                        </option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -137,7 +164,7 @@
     <div class="align-self-center text-center">
         <div class="spinner-border text-dark" role="status">
             <span class="sr-only">Processing...</span>
-          </div>
+        </div>
         <div class="text-secondary mt-2">Processing...</div>
     </div>
 </div>
