--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -50,7 +50,7 @@
             (dblclick)="navigate(connector._id)">
             <div class="d-flex align-items-center item-name text-dark fw-500">{{connector.name}}</div>
             <div class="d-flex align-items-center sub-heading">
-              <div class="item-attribute-count align-items-center">{{connector.type}}</div>
+              <div class="item-attribute-count align-items-center">{{getLabel(connector.type)}}</div>
               <div class="item-reference-count align-items-center">{{connector._references}}</div>
             </div>
             <!-- <div class="item-actions d-flex align-items-center justify-content-end">
@@ -124,16 +124,13 @@
     <div class="form-group">
       <label class="font-13 text-secondary" for="category">Category</label>
       <select id="type" class="form-control" formControlName="category">
-        <option value="DB">DB</option>
-        <option value="SFTP">SFTP</option>
-        <option value="MESSAGING">MESSAGING</option>
-        <option value="STORAGE">STORAGE</option>
+        <option [value]="category" *ngFor="let category of categoryList">{{category}}</option>
       </select>
     </div>
     <div class="form-group">
       <label class="font-13 text-secondary" for="type">Connector Type</label>
       <select id="type" class="form-control" (change)="onConnectorChange($event)">
-        <option [value]="type.label" [label]="type.label" *ngFor="let type of getTypes">{{type.label}}</option>
+        <option [value]="type.type" [label]="type.label" *ngFor="let type of getTypes">{{type.label}}</option>
       </select>
     </div>
   </div>
