--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -220,6 +220,20 @@
         </ng-container>
       </div>
     </div>
+    <div class="form-group">
+      <label class="font-13 text-secondary" for="category">Data Connector</label>
+      <select id="data" class="form-control" (change)="selectConnector($event,'data')">
+        <option [value]="connector._id" *ngFor="let connector of dataConnectors"
+          [selected]="checkDefault(connector._id)">{{connector.name}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label class="font-13 text-secondary" for="category">File Connector</label>
+      <select id="file" class="form-control" (change)="selectConnector($event,'file')">
+        <option [value]="connector._id" *ngFor="let connector of fileConnectors"
+          [selected]="checkDefault(connector._id)">{{connector.name}}</option>
+      </select>
+    </div>
   </div>
   <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
     <button type="button" class="btn btn-primary w-100" id="newServiceModalYes" [disabled]="form.invalid"
