--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -129,7 +129,7 @@
     </div>
     <div class="form-group">
       <label class="font-13 text-secondary" for="category">Category</label>
-      <select id="type" class="form-control" formControlName="category">
+      <select id="type" class="form-control" (change)="onCategoryChange($event)">
         <option [value]="category" *ngFor="let category of categoryList">{{category}}</option>
       </select>
     </div>
