--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -6,53 +6,57 @@
         <div class="border-left border-grey"></div>
     </div>
     <div class="d-flex align-items-center">
-        <div class="node-block px-3 py-2 border rounded bg-white d-flex align-items-center justify-content-start hover position-relative"
+        <div class="node-block px-3 py-2 border rounded bg-white d-flex flex-column align-items-start justify-content-start hover position-relative"
             (click)="selectNode()">
-            <span *ngIf="node.type=='FILE'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-file"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">File Agent</span>
-            </span>
-            <span *ngIf="!prevNode && node.type=='API'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-api-reciever"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">API Reciever</span>
-            </span>
-            <span *ngIf="prevNode && node.type=='API'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-invoke-api"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Invoke API</span>
-            </span>
-            <span *ngIf="node.type=='TIMER'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-clock"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Timer</span>
-            </span>
-            <span *ngIf="node.type=='CODEBLOCK'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-object text-muted"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Code Block</span>
-            </span>
-            <span *ngIf="node.type=='CONNECTOR'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-connector"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Connector</span>
-            </span>
-            <span *ngIf="node.type=='DATASERVICE'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-data-service"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Data Service</span>
-            </span>
-            <span *ngIf="node.type=='FUNCTION'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-function"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Function</span>
-            </span>
-            <span *ngIf="node.type=='MAPPING'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-mapping"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Mapping</span>
-            </span>
-            <span *ngIf="node.type=='UNWIND'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-expand"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Unwind</span>
-            </span>
-            <span *ngIf="node.type=='RESPONSE'" class="d-flex align-items-center">
-                <span class="node-icon dsi dsi-response"></span>
-                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Response</span>
-            </span>
-
+            <div class="node-type">
+                <span *ngIf="node.type=='FILE'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-file"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">File Agent</span>
+                </span>
+                <span *ngIf="!prevNode && node.type=='API'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-api-reciever"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">API Reciever</span>
+                </span>
+                <span *ngIf="prevNode && node.type=='API'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-invoke-api"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Invoke API</span>
+                </span>
+                <span *ngIf="node.type=='TIMER'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-clock"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Timer</span>
+                </span>
+                <span *ngIf="node.type=='CODEBLOCK'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-object text-muted"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Code Block</span>
+                </span>
+                <span *ngIf="node.type=='CONNECTOR'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-connector"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Connector</span>
+                </span>
+                <span *ngIf="node.type=='DATASERVICE'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-data-service"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Data Service</span>
+                </span>
+                <span *ngIf="node.type=='FUNCTION'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-function"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Function</span>
+                </span>
+                <span *ngIf="node.type=='MAPPING'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-mapping"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Mapping</span>
+                </span>
+                <span *ngIf="node.type=='UNWIND'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-expand"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Unwind</span>
+                </span>
+                <span *ngIf="node.type=='RESPONSE'" class="d-flex align-items-center">
+                    <span class="node-icon dsi dsi-response"></span>
+                    <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Response</span>
+                </span>
+            </div>
+            <div class="node-name w-100 text-center text-truncate text-muted font-12">
+                <span class="">{{node.name}}</span>
+            </div>
             <span class="delete-icon dsi dsi-trash text-danger position-absolute hover"
                 (click)="$event.stopPropagation();deleteNode()"></span>
         </div>
