--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -3,8 +3,8 @@
     <input id="directoryPath" class="form-control" type="text" [(ngModel)]="currNode.options.directoryPath">
 </div>
 <div class="form-group">
-    <label for="filePattern">File Pattern</label>
-    <input id="filePattern" class="form-control" type="text" [(ngModel)]="currNode.options.filePattern">
+    <label for="fileName">File Name</label>
+    <input id="fileName" class="form-control" type="text" [(ngModel)]="currNode.options.fileName">
 </div>
 <div class="d-flex flex-column">
     <!-- <div class="form-group d-flex align-items-center">
