--- a/src/app/home/service-manager/data-management/data-management.component.html
+++ b/src/app/home/service-manager/data-management/data-management.component.html
@@ -9,7 +9,7 @@
                 Save</button>
         </div>
     </div>
-    <div class="mt-3 bg-white rounded p-4">
+    <div class="mt-3 bg-white rounded p-4 dm-settings">
         <div class="fw-600 font-22 mb-4">Data Management</div>
         <div class="ds-stats d-flex justify-content-start">
             <div class="service-details p-3 bg-info">
