--- a/src/app/admin/user-list/user-bulk-upload/user-bulk-upload.component.html
+++ b/src/app/admin/user-list/user-bulk-upload/user-bulk-upload.component.html
@@ -280,7 +280,8 @@
                   <select name="" id="" class="form-control" formControlName="username"
                     [ngClass]="{'is-invalid':!fileMappingFrom.get('username').valid &&  fileMappingFrom.get('username').touched }">
                     <option value="">----Select----</option>
-                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}</option>
+                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}
+                    </option>
                   </select>
                 </div>
                 <span class="mapper-warning "
@@ -309,7 +310,8 @@
                   <select name="" id="" class="form-control" formControlName="password"
                     [ngClass]="{'is-invalid':!fileMappingFrom.get('password').valid &&  fileMappingFrom.get('password').touched }">
                     <option value="">----Select----</option>
-                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}</option>
+                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}
+                    </option>
                   </select>
                 </div>
                 <span class="mapper-warning "
@@ -322,7 +324,8 @@
                 <div class="value-width">
                   <select name="" id="" class="form-control" [formControlName]="'basicDetails.phone'">
                     <option value="">----Select----</option>
-                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}</option>
+                    <option *ngFor="let item of fileMappingData?.headers?.fileKeys" [value]="item.name">{{item?.name}}
+                    </option>
                   </select>
                 </div>
 
@@ -542,81 +545,85 @@
         </div> -->
         <div class="d-flex flex-column w-100 ">
           <div class="card-container bg-white mt-3">
-              <div class="data-grid-options d-flex align-items-center justify-content-end py-2">
-                  <div class="d-flex align-items-center">
-                      <span class="page-info">
-                          {{startNo}}-{{endNo}} of {{totalUserCount}}
-                      </span>
-                      <button type="button" class="btn btn-link ml-2" [disabled]="disablePrev" (click)="prevPage()">
-                          <span class="fa fa-angle-left"></span>
-                      </button>
-                      <button type="button" class="btn btn-link ml-2" [disabled]="disableNext" (click)="nextPage()">
-                          <span class="fa fa-angle-right"></span>
-                      </button>
-                  </div>
+            <div class="data-grid-options d-flex align-items-center justify-content-end py-2">
+              <div class="d-flex align-items-center">
+                <span class="page-info">
+                  {{startNo}}-{{endNo}} of {{totalUserCount}}
+                </span>
+                <button type="button" class="btn btn-link ml-2" [disabled]="disablePrev" (click)="prevPage()">
+                  <span class="fa fa-angle-left"></span>
+                </button>
+                <button type="button" class="btn btn-link ml-2" [disabled]="disableNext" (click)="nextPage()">
+                  <span class="fa fa-angle-right"></span>
+                </button>
               </div>
-              <div class="table-height">
-                  <div class="data-grid border" odpDataGrid >
-                      <div class="data-grid-header">
-                          <div class="data-grid-row">
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="Import">
-                                  Import</div>
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="hash">#
-                              </div>
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="userName">
-                                  User Name</div>
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="name">Name
-                              </div>
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='phone'>Phone
-                              </div>
-                              <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='action'>
-                                  Action</div>
-                              <!-- <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='btn'></div> -->
-                          </div>
-                      </div>
-                      <div class="data-grid-body">
-                          <div class="data-grid-row" *ngFor="let usr of userList; let usrIndex = index"  (click)="resolveConflict(usrIndex)" [ngClass]="{
+            </div>
+            <div class="table-height">
+              <div class="data-grid border" odpDataGrid>
+                <div class="data-grid-header">
+                  <div class="data-grid-row">
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="Import">
+                      Import</div>
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="hash">#
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="userName">
+                      User Name</div>
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id="name">Name
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='phone'>Phone
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='action'>
+                      Action</div>
+                    <!-- <div class="data-grid-cell d-flex align-items-center head-cell no-move no-sort" id='btn'></div> -->
+                  </div>
+                </div>
+                <div class="data-grid-body">
+                  <div class="data-grid-row" *ngFor="let usr of userList; let usrIndex = index"
+                    (click)="resolveConflict(usrIndex)" [ngClass]="{
                             'bg-danger1 ':usr?.status==='Error',
                             'bg-light ': isConflictIgnoredRecord(usr),
                             'bg-yellow':isConflictRecord(usr)}">
-                              <!-- <div class="data-grid-cell d-flex align-items-center">
+                    <!-- <div class="data-grid-cell d-flex align-items-center">
                                   <odp-round-check [edit]="{status:true}" [(checked)]="usr.checked"></odp-round-check>
                               </div> -->
-                              <!-- <div class="data-grid-cell d-flex align-items-center"
+                    <!-- <div class="data-grid-cell d-flex align-items-center"
                                    (click)="resolveConflict(usrIndex)" [ngClass]="{
                                       'bg-danger1 ':usr?.status==='Error',
                                       'bg-light ': isConflictIgnoredRecord(usr),
                                       'bg-yellow':isConflictRecord(usr)}">
       
                               </div> -->
-                              <div class="data-grid-cell d-flex align-items-center">
-                                  <span class="status stopped" *ngIf="usr?.status==='Error'"></span>
-                                  <span class="status pending" *ngIf="isConflictRecord(usr)"></span>
-                                  <span class="fa fa-check-circle small-icon text-success"
-                                      *ngIf="isConflictResovedRecord(usr)"></span>
-                                  <span class="fa fa-times small-icon text-muted" *ngIf="isConflictIgnoredRecord(usr)"></span>
-                                  <span class="fa fa-check small-icon text-success"
-                                      *ngIf="usr?.status!=='Error' && !usr.conflict"></span> </div>
-                              <div class="data-grid-cell d-flex align-items-center"> <span>{{usrIndex+1}}</span></div>
-                              <div class="data-grid-cell d-flex align-items-center"> <span>{{usr?.data?.username}}</span>
-                              </div>
-                              <div class="data-grid-cell d-flex align-items-center">
-                                  <span>{{usr?.data.basicDetails?.name}}</span> </div>
-                              <div class="data-grid-cell d-flex align-items-center">
-                                  <span>{{usr?.data.basicDetails?.phone}}</span> </div>
-      
-                              <div class="data-grid-cell d-flex align-items-center"> <span
-                                      class="fa fa-ellipsis-h small-icon text-muted"
-                                      *ngIf="usr?.status=='Error' || !usr.conflict"></span>
-                                  <span class="text-primary" *ngIf="usr?.status!=='Error' && usr.conflict">Resolve</span>
-                              </div>
-      
-                          </div>
-                      </div>
+                    <div class="data-grid-cell d-flex align-items-center">
+                      <span class="status stopped" *ngIf="usr?.status==='Error'"></span>
+                      <span class="status pending" *ngIf="isConflictRecord(usr)"></span>
+                      <span class="fa fa-check-circle small-icon text-success"
+                        *ngIf="isConflictResovedRecord(usr)"></span>
+                      <span class="fa fa-times small-icon text-muted" *ngIf="isConflictIgnoredRecord(usr)"></span>
+                      <span class="fa fa-check small-icon text-success"
+                        *ngIf="usr?.status!=='Error' && !usr.conflict"></span>
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center"> <span>{{usrIndex+1}}</span></div>
+                    <div class="data-grid-cell d-flex align-items-center"> <span>{{usr?.data?.username}}</span>
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center">
+                      <span>{{usr?.data.basicDetails?.name}}</span>
+                    </div>
+                    <div class="data-grid-cell d-flex align-items-center">
+                      <span>{{usr?.data.basicDetails?.phone}}</span>
+                    </div>
+
+                    <div class="data-grid-cell d-flex align-items-center"> <span
+                        class="fa fa-ellipsis-h small-icon text-muted"
+                        *ngIf="usr?.status=='Error' || !usr.conflict"></span>
+                      <span class="text-primary" *ngIf="usr?.status!=='Error' && usr.conflict">Resolve</span>
+                    </div>
+
                   </div>
+                </div>
               </div>
+            </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
     <div class="d-flex flex-column w-100 h-100 ml-4 mt-4" *ngIf="activeStep==4">
@@ -698,7 +705,7 @@
         <div class="text-muted font-13">Select a record to use</div>
         <div class="duplicates">
           <ng-container *ngFor="let user of selectedConflictRecords;let uIndex=index">
-            <div class="d-flex confict-div align-items-center justify-content-between p-2 rounded" 
+            <div class="d-flex confict-div align-items-center justify-content-between p-2 rounded"
               (click)="markselected(uIndex)" [ngClass]="{'selected-record':user?.selected}">
               <span class="circle rounded-circle border mr-2 d-flex align-items-center justify-content-center "
                 [ngClass]="{'border-blue':user?.selected}"></span>
@@ -713,7 +720,8 @@
       <div class="d-flex justify-content-end w-100">
 
         <button type="button" class="btn btn-link mr-3" (click)="conflictModelRef.close(false);">Ignore All</button>
-        <button type="button" class="btn btn-primary btn-min-width" (click)="conflictModelRef.close(true)">Resolve</button>
+        <button type="button" class="btn btn-primary btn-min-width"
+          (click)="conflictModelRef.close(true)">Resolve</button>
       </div>
     </div>
   </div>
