--- a/src/app/home/schema-utils/configuration/configuration.component.scss
+++ b/src/app/home/schema-utils/configuration/configuration.component.scss
@@ -2,8 +2,11 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 
-.configuration-wrapper{
+.configuration-wrapper {
   min-height: calc(100vh - 274px);
+  max-height: calc(100vh - 274px);
+  overflow: auto;
+
   .sidenav {
     min-width: 250px;
     max-width: 250px;
